5.0.6 - fix z-index and update version

--- a/client/assets/less/tricktionary.less
+++ b/client/assets/less/tricktionary.less
@@ -217,6 +217,7 @@ section.tricktionary {
     width            : 450px;
     overflow-y       : scroll;
     overflow-x       : hidden;
+    z-index          : 1000;
 
     .phones({
         width   : 100%;
